src/objects/Email_log__c.object
<CustomObject>
    <description>Used for logging emails that don&apos;t come from contacts</description>
    <fields>
        <fullName>Area_of_law__c</fullName>
        <label>Area of law</label>
        <picklist>
            <picklistValues>
                <fullName>Civil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client-Solicitor relations/issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit &amp; Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing/Landlord &amp; Tenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immigration/refugee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negligence/Personal Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighbour disputes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property/Interest in Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Welfare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will/Probate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Breakdown_of_Primary_Area__c</fullName>
        <label>Breakdown of Primary Area</label>
        <picklist>
            <controllingField>Area_of_law__c</controllingField>
            <picklistValues>
                <fullName>Tort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court proceedings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ward of Court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power of Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deedpoll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freedom of Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitor fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory performance/rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setting up company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellectual Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goods &amp; services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility bills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communcaitons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent Arrears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hire purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Collection Procedures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defendant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem with gardai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dismissal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discrimination</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Date_email_received__c</fullName>
        <label>Date email received</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Email log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Email log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>